fixed band image

--- a/Module-4/fanpage.html
+++ b/Module-4/fanpage.html
@@ -8,7 +8,7 @@
 
     <body>
         <img
-            src="https://static.wikia.nocookie.net/riffipedia/images/5/5e/Khruangbin.jpg/revision/latest?cb=20181027005112"
+            src="https://upload.wikimedia.org/wikipedia/commons/a/ae/Khruangbin_am_Haldern_Pop_Festival_2019_-_11_-_Foto_Martin_Schumann_%28cropped%29.jpg"
             alt="Khruangbin"
         />
         <h1>
