fixed image size

--- a/Module-4/fanpage.html
+++ b/Module-4/fanpage.html
@@ -9,7 +9,7 @@
     <body>
         <img
             src="https://upload.wikimedia.org/wikipedia/commons/a/ae/Khruangbin_am_Haldern_Pop_Festival_2019_-_11_-_Foto_Martin_Schumann_%28cropped%29.jpg"
-            alt="Khruangbin"
+            alt="Khruangbin" width="900" height="600"
         />
         <h1>
             KHRUANGBIN is 
